# oms-bridge

./: README.md  example.env  pyproject.toml  task.md
app/: clients.py  config.py  main.py  models.py  store.py
app/static/: app.js  index.html  style.css
docker/: Dockerfile  docker-compose.full.yml  docker-compose.yml  mosquitto.conf  telegraf.conf
docker/grafana/provisioning/dashboards/: dashboards.yml  oms-telemetry.json
docker/grafana/provisioning/datasources/: influxdb.yml
