[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "oms-parser-bridge"
version = "0.1.0"
description = "FastAPI bridge for OMS/wM-Bus telegrams via Lobaro + MQTT"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "OMS Hub"}]

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.27",
  "pydantic-settings>=2.2",
  "aiomqtt>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
